--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Portfolio of Naga Pavan Bhuma"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="https://yt3.ggpht.com/ytc/AIdro_mCZUi9xwC0E3fpFhFkHJ82ctJ2jtr_F5uQG11rlF8Kda4=s600-c-k-c0x00ffffff-no-rj-rp-mo" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
